PongGame.setBallVelocity() now doesnt do anything unless ball is heading towards you. This way we avoid unecessary amounts of logic handling and network/socket data transfers. * Split UPDATE_BALL_INFO into UPDATE_BALL_POS and UPDATE_BALL_VELOCITY to avoid unecessary network/socket data transfers. * Bugfix: Avoid ball getting stuck inside player. * Bugfix: Avoid both players scoring at the same time. * Bugfix: Ball.velocity.x were sometimes wrong after hitting a player. * Bugfix: Avoid ball getting stuck when hitting the edges of the game board.

--- a/client/assets/css/base/_form.css
+++ b/client/assets/css/base/_form.css
@@ -41,6 +41,7 @@ button:hover,
 button:active,
 [type="submit"]:active {
 	transform: translate3d(0,2px,0);
+	transition: none;
 }
 button.unstyled,
 [type="submit"].unstyled {
